[package]
name = "modify-http-mid"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["server", "client", "http1"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio"] }
log = "0.4"
log4rs = { version = "1", default-features = false, features = ["console_appender"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
